Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13418

QNetworkRequest does not use SslConfiguration set by QSSlConfiguration::setDefaultConfiguration()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.11.2
    • 4.6.3, 4.7.0, 4.7.1, 4.8.0, 4.8.x, 5.0.0, Some future release
    • None
    • 801a0cc7ace9a1d980900537dffb50774cde03f7

    Description

      void QSslConfiguration::setDefaultConfiguration ( const QSslConfiguration & configuration ) [static]
      Sets the default SSL configuration to be used in new SSL connections to be configuration. Existing connections are not affected by this call.

      void QNetworkRequest::setSslConfiguration ( const QSslConfiguration & config )
      Sets this network request's SSL configuration to be config. The settings that apply are the private key, the local certificate, the SSL protocol (SSLv2, SSLv3, TLSv1 where applicable) and the ciphers that the SSL backend is allowed to use.

      By default, no SSL configuration is set, which allows the backends to choose freely what configuration is best for them.

      It seems that QSslConfiguration::setDefaultConfiguration only affects QSslSocket, and QNetworkRequest not affected
      1. Please fix documentation of QSslSocket about using default ssl configuration. Describe, that 'no default configuration' is the default configuration, which may be changed by QSslConfiguration::setDefaultConfiguration()
      2. Teach QNetworkRequest to use sssl configuration set by QSslConfiguration::setDefaultConfiguration, and update documentation too..

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              tpochep Timur Pocheptsov
              socketpair@gmail.com Коренберг Марк
              Votes:
              3 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes